--- a/style.css
+++ b/style.css
@@ -73,3 +73,36 @@ textarea
     max-height: 20rem;
     font-size: 1.2rem;
 }
+
+.image-wrapper
+{
+    width: 15rem;
+    aspect-ratio: 1;
+    border-radius: 50%;
+    overflow: hidden;
+    justify-self: center;
+}
+
+.image-wrapper img
+{
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+
+table
+{
+    width: 30rem;
+    margin: 4rem auto;
+}
+
+td
+{
+    text-align: center;
+}
+
+table, th, td {
+    border: 1px solid black;
+    border-collapse: collapse;
+    padding: 0.8rem 0rem;
+  }
