--- a/style.css
+++ b/style.css
@@ -21,6 +21,12 @@ form
 h1
 {
     text-align: center;
+    padding-bottom: 1.5rem;
+}
+
+h3
+{
+    text-align: center;
     padding-bottom: 3rem;
 }
 
