--- a/style.css
+++ b/style.css
@@ -10,3 +10,105 @@
     max-width: 1200px;
     margin: 4rem auto;
 }
+
+form
+{
+    padding: 4rem;
+    box-shadow: 0 0 0.4rem gray;
+    border-radius: 1rem;
+}
+
+h1
+{
+    text-align: center;
+    padding-bottom: 1.5rem;
+}
+
+h3
+{
+    text-align: center;
+    padding-bottom: 3rem;
+}
+
+label
+{
+    font-size: 1.2rem;
+}
+
+input
+{
+    display: block;
+    padding: 0.6rem 1rem;
+    font-size: 1.2rem;
+    width: 100%;
+    margin: 0.6rem 0rem 4rem 0rem;
+}
+
+button
+{
+    margin: 0 auto;
+    padding: 0.4rem 1rem;
+    display: block;
+    background-color: transparent;
+    border-radius: 0.4rem;
+    font-size: 1.2rem;
+    cursor: pointer;
+}
+
+button:hover
+{
+    background-color: black;
+    color: white;
+    transition: all .4s ease;
+}
+
+.picture-input
+{
+    padding: 0;
+    font-size: 1rem;
+}
+
+textarea
+{
+    display: block;
+    min-width: 100%;
+    max-width: 100%;
+    padding: 0.6rem 1rem;
+    margin: 0.6rem 0rem 4rem 0rem;
+    min-height: 15rem;
+    max-height: 20rem;
+    font-size: 1.2rem;
+}
+
+.image-wrapper
+{
+    width: 15rem;
+    aspect-ratio: 1;
+    border-radius: 50%;
+    overflow: hidden;
+    justify-self: center;
+}
+
+.image-wrapper img
+{
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+
+table
+{
+    width: 30rem;
+    margin: 4rem auto;
+}
+
+td
+{
+    text-align: center;
+}
+
+table, th, td {
+    border: 1px solid black;
+    border-collapse: collapse;
+    padding: 0.8rem 0rem;
+  }
