--- a/style.css
+++ b/style.css
@@ -22,11 +22,18 @@ h1
 {
     text-align: center;
     padding-bottom: 1.5rem;
+    font-size: 4rem;
 }
 
 h3
 {
     text-align: center;
+    font-size: 1.4rem;
+    padding-bottom: 1rem;
+}
+
+.email
+{
     padding-bottom: 3rem;
 }
 
@@ -59,7 +66,7 @@ button:hover
 {
     background-color: black;
     color: white;
-    transition: all .4s ease;
+    transition: all .2s ease;
 }
 
 .picture-input
@@ -107,8 +114,35 @@ td
     text-align: center;
 }
 
-table, th, td {
+table, th, td 
+{
     border: 1px solid black;
     border-collapse: collapse;
     padding: 0.8rem 0rem;
-  }
+    font-size: 1.2rem;
+}
+
+.btn-wrapper
+{
+    text-align: center;
+    margin-top: 8rem;
+}
+
+.btn-wrapper a
+{
+    text-decoration: none;
+    padding: 0.6rem 1rem;
+    background-color: transparent;
+    border-radius: 0.4rem;
+    font-size: 1.2rem;
+    cursor: pointer;
+    border: 0.1rem solid black;
+    color: black;
+}
+
+.btn-wrapper a:hover
+{
+    background-color: black;
+    color: white;
+    transition: all .2s ease;
+}
